kube/deploy/core/1-kube-system/components/cilium/netpols/labelled-allow-egress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-apiserver
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/apiserver: allow
  egress:
    - toEntities:
        - kube-apiserver
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-host
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/host: allow
  egress:
    - toEntities:
        - host

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-world
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/world: allow
  egress:
    - toEntities:
        - world

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-internet
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/internet: allow
  egress:
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8
            - ${LAN_NETWORK}/16
            - ${ISP_NETWORK}/24

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-internet-https
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/internet-https: allow
  egress:
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8
            - ${LAN_NETWORK}/16
            - ${ISP_NETWORK}/24
      toPorts:
        - ports:
            - port: "443"
              protocol: ANY

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-world-https
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/world-https: allow
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "443"
              protocol: UDP

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-dlna
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/dlna: allow
  egress:
    - toCIDR:
        - 239.255.255.250/32
      toPorts:
        - ports:
            - port: "1900"
              protocol: UDP

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-github
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/github: allow
  egress:
    - toFQDNs:
        - matchPattern: "github.com"
        - matchPattern: "*.github.com"
        - matchPattern: "*.github.dev"
        - matchPattern: "*.github.io"
        - matchPattern: "*.ghcr.io"
        - matchPattern: "*.githubusercontent.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "443"
              protocol: UDP

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-discord
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/discord: allow
  egress:
    - toFQDNs:
        - matchPattern: "discord.com"
        - matchPattern: "*.discord.com"
        - matchPattern: "discordapp.com"
        - matchPattern: "*.discordapp.com"
        - matchPattern: "discord.gg"
        - matchPattern: "*.discord.gg"
        - matchPattern: "gateway.discord.gg"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "443"
              protocol: UDP

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-youtube
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/youtube: allow
  egress:
    - toFQDNs:
        - matchPattern: "ytimg.com"
        - matchPattern: "*.ytimg.com"
        - matchPattern: "googlevideo.com"
        - matchPattern: "*.googlevideo.com"
        - matchPattern: "youtube.com"
        - matchPattern: "*.youtube.com"
        - matchPattern: "ggpht.com"
        - matchPattern: "*.ggpht.com"
        - matchPattern: "returnyoutubedislikeapi.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "443"
              protocol: UDP

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-gravatar
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/gravatar: allow
  egress:
    - toFQDNs:
        - matchPattern: "www.gravatar.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-isp-router
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/isp-router: allow
  egress:
    - toCIDRSet:
        - cidr: ${ISP_ROUTER_IP}/32
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-pve
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/pve: allow
  egress:
    - toCIDRSet:
        - cidr: ${PVE_IP}/32
      toPorts:
        - ports:
            - port: "8006"
              protocol: TCP

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-truenas-https
spec:
  endpointSelector:
    matchLabels:
      egress.truenas.home.arpa/https: allow
  egress:
    - toCIDRSet:
        - cidr: ${TRUENAS_IP}/32
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-truenas-ssh
spec:
  endpointSelector:
    matchLabels:
      egress.truenas.home.arpa/ssh: allow
  egress:
    - toCIDRSet:
        - cidr: ${TRUENAS_IP}/32
      toPorts:
        - ports:
            - port: "22"
              protocol: TCP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-truenas-iscsi
spec:
  endpointSelector:
    matchLabels:
      egress.truenas.home.arpa/iscsi: allow
  egress:
    - toCIDRSet:
        - cidr: ${TRUENAS_IP}/32
      toPorts:
        - ports:
            - port: "3260"
              protocol: TCP

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-ntp
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/ntp: allow
  egress:
    - toCIDRSet:
        - cidr: ${GATEWAY_IP}/32
      toPorts:
        - ports:
            - port: "123"
              protocol: UDP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: labelled-allow-egress-smtp
spec:
  endpointSelector:
    matchLabels:
      smtp.egress.home.arpa/google: allow
  egress:
    - toFQDNs:
        - matchName: smtp.google.com
      toPorts:
        - ports:
            - port: "587"
              protocol: TCP
